fix JdbcFactory connection props and configure duckdb